--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@ body {
   margin-top: 100px;
   text-align: center;
   background: white;
+  font-family: "Fira Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+    
 }
 
 .button {
@@ -11,6 +15,12 @@ body {
   font-size: 16px;
   cursor: pointer;
   display: inline-block;
+   
+  border-radius: 50%;
+  border: 4px solid black;
+  font-family: "Fira Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .button:active {
