--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,10 @@
 body {
+  margin-top: 100px;
+  text-align: center;
+  background: white;
+  font-family: "Fira Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   background: white;
   font-family: "Fira Sans", sans-serif;
   font-weight: 400;
